Fix article actions on mobile phones

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -69,7 +69,6 @@
   padding-top: 20px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .readLaterItem {
@@ -103,6 +102,13 @@
     font-size: 2.4rem;
   }
 }
+/* Mobile screen */
+@media (max-width: 40rem) {
+  .newsActions {
+    display: block;
+  }
+}
+
 @keyframes appear {
   100% {
     transform: translate(0, 0);
